# bdk-yew-example

./: Cargo.toml  README.md  index-92532c4a276b52f5.js  index-92532c4a276b52f5_bg.wasm  index-cfc087b34e7b2adf.js  index-cfc087b34e7b2adf_bg.wasm  index-ef1a1093db2a102a.js  index-ef1a1093db2a102a_bg.wasm  index.css  index.html  index.scss
.github/workflows/: continuous_deployment.yml  continuous_integration.yml
src/: app.rs  main.rs
