[package]
name = "bdk-wasm-example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4"
console_log = "0.2"
wee_alloc = "0.4"
wasm-bindgen-futures = "0.4"
yew = "0.19"
bdk = { version = "0.17", default-features = false, features = ["use-esplora-reqwest"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }